up pages about themed components

--- a/EasyEnglish.Theme.Demo/Components/App.razor
+++ b/EasyEnglish.Theme.Demo/Components/App.razor
@@ -70,9 +70,15 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="/progress-and-loading" class="nav-link @GetNavClass("/progress-and-loading")"
-                                           title="Progress and Loading">
-                                            📄 Progress and Loading
+                                        <a href="/themed-progress" class="nav-link @GetNavClass("/themed-progress")"
+                                           title="Progress">
+                                            📊 Progress
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="/themed-loading" class="nav-link @GetNavClass("/themed-loading")"
+                                           title="Loading">
+                                            🔄 Loading
                                         </a>
                                     </li>
                                 </ul>
