up ThemedProgressBar page

--- a/EasyEnglish.Theme.Demo/Components/App.razor
+++ b/EasyEnglish.Theme.Demo/Components/App.razor
@@ -71,8 +71,8 @@
                                     </li>
                                     <li class="nav-item">
                                         <a href="/themed-progress" class="nav-link @GetNavClass("/themed-progress")"
-                                           title="Progress">
-                                            📊 Progress
+                                           title="Progress Bar">
+                                            📊 Progress Bar
                                         </a>
                                     </li>
                                     <li class="nav-item">
