--- a/EasyEnglish.Theme.Demo/Components/App.razor
+++ b/EasyEnglish.Theme.Demo/Components/App.razor
@@ -81,6 +81,12 @@
                                             🔄 Loading
                                         </a>
                                     </li>
+                                    <li class="nav-item">
+                                        <a href="/icons" class="nav-link @GetNavClass("/icons")"
+                                           title="Icons">
+                                            🌸 Icons
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
 
@@ -96,9 +102,9 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="/responsive" class="nav-link @GetNavClass("/responsive")"
-                                           title="Responsive">
-                                            📱 Responsive
+                                        <a href="/breakpoints" class="nav-link @GetNavClass("/breakpoints")"
+                                           title="Breakpoints">
+                                            📱 Breakpoints
                                         </a>
                                     </li>
                                     <li class="nav-item">
